--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -1,3 +1,22 @@
 // COLORS
 $black: #000;
 $white: #fff;
+$color-primary: #6C8DA7;
+$color-secondary: #D1C7EC;
+$color-tertiary: #618D87;
+$color-001: #F69DE0;
+$color-002: #F4CFDF;
+$color-003: #F875D7;
+$color-004: #B4A7D6;
+$color-005: #7765A7;
+$color-006: #B6D8F2;
+$color-007: #F7F6CF;
+$color-008: #D2E8BA;
+$color-009: #FAD7C4;
+$color-010: #B1A09B;
+
+
+// FONTS
+$font-001: "Montserrat Alternates", sans-serif;
+$font-002: "Luckiest Guy", cursive;
+$font-003: "Rage", sans-serif;
